# jobhound

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  PICKUP.md  README.md  Taskfile.yml  commitlint.config.mjs  mise.toml  pyproject.toml  release-please-config.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: feature.md
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  release.yml
decisions/: 2026-05-11-ddd-refactor.md  2026-05-12-yaml-to-toml-migration.md  2026-06-07-cli-verb-object-convention.md  2026-06-08-no-event-entity-derive-timeline.md  2026-06-08-notes-storage-model.md  2026-07-01-url-job-scraping.md
docs/: commands.md
docs/plans/: 2026-05-11-ddd-refactor.md  2026-05-11-jh-cli.md  2026-05-11-post-refactor-housekeeping.md  2026-05-13-history-rewrite-map.md  2026-05-13-phase3a-read-api.md  2026-05-13-semantic-release.md  2026-05-14-file-management.md  2026-05-14-phase4-cleanup-cli-services.md  2026-05-14-phase4-mcp.md  2026-05-15-utc-timestamps.md  2026-05-17-shell-completion.md  2026-06-05-unarchive-and-list-filters.md  2026-06-06-short-flags.md
docs/specs/: 2026-05-11-jh-cli-design.md  2026-05-12-jh-read-api-design.md  2026-05-13-semantic-release-design.md  2026-05-14-file-management-design.md  2026-05-14-phase4-mcp-design.md  2026-05-15-command-naming-review-design.md  2026-05-15-file-open-design.md  2026-05-15-shell-completion-design.md  2026-05-15-utc-timestamps-design.md  2026-05-16-command-rename-plan.md  2026-06-05-unarchive-and-list-filters-design.md  2026-06-06-short-flags-design.md
quality/: criteria.md
scripts/: migrate_dates_to_datetimes.py  migrate_from_yaml.py  migrate_notes_to_directory.py  restore_legacy_notes_md.py
src/jobhound/: __init__.py  cli.py  config.py  contact.py  meta_io.py  opportunities.py  paths.py  prompts.py  repository.py  transitions.py
tests/: conftest.py  test_cli.py  test_cli_error_handling.py  test_cmd_add.py  test_cmd_apply.py  test_cmd_browser.py  test_cmd_bump.py  test_cmd_clear.py  test_cmd_config.py  test_cmd_contact.py  test_cmd_edit.py  test_cmd_file.py  test_cmd_lifecycle.py  test_cmd_link.py  test_cmd_link_contact.py  test_cmd_list.py  test_cmd_log.py  test_cmd_new.py  test_cmd_new_url.py  test_cmd_note.py  test_cmd_remove.py  test_cmd_set.py  test_cmd_simple.py  test_cmd_stats.py  test_cmd_tag.py  test_cmd_terminal.py  test_cmd_unarchive.py  test_config.py  test_contact.py  test_git.py  test_meta_io.py  test_opportunities.py  test_opportunity_methods.py  test_paths.py  test_prompts.py  test_repository.py  test_slug.py  test_slug_value.py  test_smoke.py  test_status.py  (+1 more)
tests/application/: conftest.py  test_field_service.py  test_file_service.py  test_frontmatter.py  test_lifecycle_service.py  test_notes_service.py  test_ops_service.py  test_query.py  test_relation_service.py  test_revisions.py  test_scrape_service.py  test_serialization.py  test_snapshots.py
tests/commands/: test_cmd_complete.py  test_cmd_completion.py  test_cmd_export.py  test_cmd_note.py  test_cmd_show.py  test_completion_scripts.py
tests/domain/: test_new_prospect.py  test_opportunities.py  test_slug.py  test_timekeeping.py
tests/infrastructure/: test_config.py  test_meta_io_validation.py
tests/integration/: test_z_suffix_envelope.py
tests/mcp/: conftest.py  test_converters.py  test_errors.py  test_server_integration.py  test_tools_fields.py  test_tools_files.py  test_tools_lifecycle.py  test_tools_ops.py  test_tools_reads.py  test_tools_relations.py  test_tools_scrape.py
tests/scripts/: test_migrate.py  test_migrate_notes.py
(+107 files in other folders)
