[project]
name = "jobhound"
version = "0.6.1"
description = "Action-based CLI for tracking a job hunt"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cyclopts==4.11.2",
    "questionary>=2.0",
    "tomli-w>=1.0",
    "rich>=13",
    "xdg-base-dirs>=6",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]

[project.scripts]
jh = "jobhound.cli:app"
jh-mcp = "jobhound.mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "ty>=0.0.1a8",
    "pytest-cov>=5",
    "pytest-asyncio>=0.23",
    "mcp>=1.0",
]

[build-system]
requires = ["uv_build>=0.4,<0.12"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.ty.rules]
# strict-by-default; tighten as needed

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
