[project]
name = "jobhound"
version = "0.11.0"
description = "Action-based CLI for tracking a job hunt"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "cyclopts==4.11.2",
    "questionary>=2.0",
    "tomli-w>=1.0",
    "rich>=13",
    "tzlocal>=5.0",
    "xdg-base-dirs>=6",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]

[project.scripts]
jh = "jobhound.cli:main"
jh-mcp = "jobhound.mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "ty>=0.0.1a8",
    "pytest-cov>=5",
    "pytest-asyncio>=0.23",
    "mcp>=1.0",
    "hypothesis",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jobhound"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.ty.rules]
# strict-by-default; tighten as needed

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
pythonpath = ["."]
# Cyclopts heuristically warns when its app is invoked without explicit
# tokens under pytest, suggesting `app([])`. `tests/test_cli.py`
# deliberately monkeypatches `sys.argv` and then calls `main()` (which
# invokes `app()` with no positional tokens, so cyclopts reads the
# replaced `sys.argv`) — exercising the production argv-reading branch.
# Cyclopts' stack inspection can't distinguish this from a forgotten
# `[]` and false-positives. Tracked in #89.
filterwarnings = [
    "ignore:Cyclopts application invoked without tokens.*:UserWarning",
]
